<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hqgame.networknes.CreditsPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/app_version_text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/copyright_text"/>

                <TextView
                    android:id="@+id/program_license_link"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingVertical="6dp"
                    android:textColor="#0000ff"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/license"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/contacts"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="lehoangq@gmail.com"/>

            <LinearLayout
                android:id="@+id/privacy_policy_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

                <TextView
                    android:id="@+id/privacy_policy_url_text_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/privacy_policy"/>
                <TextView
                    android:id="@+id/privacy_policy_url_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/privacy_policy_msg"
                    android:textColor="#0000ff"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/nestopia"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/nestopia_copyright_text"/>

                <TextView
                    android:id="@+id/nestopia_license_link"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingVertical="6dp"
                    android:textColor="#0000ff"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/license"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="RakNet"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/raknet_copyright_text"/>

                <TextView
                    android:id="@+id/raknet_license_link"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingVertical="6dp"
                    android:textColor="#0000ff"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/license"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="miniupnp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_alignParentLeft="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/miniupnp_copyright_text"/>

                <TextView
                    android:id="@+id/miniupnp_license_link"
                    android:layout_alignParentRight="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingVertical="6dp"
                    android:textColor="#0000ff"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/license"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/icon_credit_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_credit_msg"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/freepik_credit_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freepik_credit_msg"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/google_credit_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google_credit_msg"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
