<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".BaseInvitationsPage">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ui_invitations_list"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:dividerHeight="1dp"
            android:divider="@android:color/darker_gray"
            android:choiceMode="none"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btnCreatePublicRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/create_public_room_text"/>

    <Button
        android:id="@+id/btnPrivateRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/private_rooms_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <Button
            android:id="@+id/btnJoinRoom"
            android:text="@string/join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:enabled="false"/>

        <ImageButton
            android:id="@+id/btnPrevRoomsPage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_backward"/>

        <ImageButton
            android:id="@+id/btnNextRoomsPage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_forward"/>

        <ImageButton
            android:id="@+id/btnRoomRefresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/refresh"/>

        <Button
            android:id="@+id/btnDeleteRoom"
            android:visibility="gone"
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>
